--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ scikit-learn==1.3.0
 xgboost==1.7.5
 matplotlib==3.7.2
 joblib==1.3.1
-gunicorn==20.1.0           # Necessário para produção no Railway
+gunicorn==20.1.0
+numpy==1.24.3 
