--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+numpy==1.24.3
+pandas==2.0.3
+scikit-learn==1.3.0
+xgboost==1.7.6
 flask==2.3.2
 gunicorn==20.1.0
-xgboost==1.7.6
-scikit-learn==1.3.0
-pandas==2.0.3
 joblib==1.3.2
